<resources>
    <string name="app_name">sem3</string>
    <string name="tvLabelMovie">Please select genre of the movie</string>

    <string name="TIL1">Fill in the title of the movie</string>
    <string name="TIL2">Fill in the release date of the movie</string>
    <string name="TIL3">fill in the profit of the movie</string>

    <string name="rbNetflix">Netflix</string>
    <string name="rnHBO">HBO</string>
    <string name="btSave">SAVE</string>
    <string-array name="arrayMovieGenre">
        <item>Thriller</item>
        <item>Comedy</item>
        <item>Drama</item>
        <item>Romance</item>
    </string-array>
</resources>